[package]
name = "workon"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.2"
directories = "3.0.2"
serde = { version = "1.0.116", features = ["derive"] }
serde_yaml = "0.8.17"
thiserror = "1.0.25"
